# emb_projector

./: README.md  [EMB]visualize_emb.ipynb  pyproject.toml
data/: config.json  config_gcs.json  embeddings_1.tsv  metadata.tsv  projector_config.pbtxt
runs/Dec19_05-22-19_xiang-cds-dev/: events.out.tfevents.1671427341.xiang-cds-dev.67963.0
runs/Dec19_05-24-55_xiang-cds-dev/: events.out.tfevents.1671427495.xiang-cds-dev.67963.1
runs/Dec19_05-26-20_xiang-cds-dev/: events.out.tfevents.1671427580.xiang-cds-dev.67963.2
runs/Dec19_05-26-20_xiang-cds-dev/00000/default/: metadata.tsv
